# pyICESHEET

./: .gitignore  CHANGES.md  README.md  environment.yml  pyproject.toml
docs/: design-note-01-understanding-icesheet.md  design-note-02-architecture.md  design-note-03-summit-discrepancy.md  design-note-04-physical-thinning.md  design-note-05-planA-vs-planB.md  design-note-06-reconstruction-system.md
examples/greenland/: README.md  _fortran_io.py  calibrate_tau.py  compare_observed.py  fortran_cap_test.py  make_fortran_reference.py  run_greenland.py
grass/r.icesheet/: Makefile  r.icesheet.html  r.icesheet.py
src/pyicesheet/: __init__.py  _geometry.py  bmi.py  calibrate.py  config.py  constants.py  contour.py  fields.py  flowline.py  grid.py  margin.py  physics.py  solver.py  surface.py  tau.py
src/pyicesheet/io/: __init__.py  raster.py  vector.py
tests/: test_adaptive_thinning.py  test_bmi.py  test_calibrate.py  test_convergence_clip.py  test_fields.py  test_flowline_single.py  test_front_convergence.py  test_grid.py  test_margin.py  test_physics_nye.py  test_solver_radial.py  test_survivor_rule.py
